--- a/duck.cabal
+++ b/duck.cabal
@@ -62,7 +62,8 @@ executable duck
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        Duck.GH
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -73,7 +74,9 @@ executable duck
         -- Alternative prelude.
         relude ^>= 1.2.0.0,
         -- Needed for github integration
-        process ^>= 1.6.0.0
+        process ^>= 1.6.0.0,
+        -- Needed for JSON parsing
+        aeson ^>= 2.2.0.0
 
     -- Directories containing source files.
     hs-source-dirs:   app
