--- a/duck.cabal
+++ b/duck.cabal
@@ -63,7 +63,8 @@ executable duck
 
     -- Modules included in this executable, other than Main.
     other-modules:
-        Duck.GH
+        Duck.GH,
+        Duck.GraphQl
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -73,6 +74,8 @@ executable duck
         base ^>=4.20.2.0,
         -- Alternative prelude.
         relude ^>= 1.2.0.0,
+        -- We need this for direct access to the builder methods.
+        text ^>= 2.1.0.0,
         -- Needed for github integration
         typed-process ^>= 0.2.0.0,
         -- Needed for JSON parsing
