--- a/duck.cabal
+++ b/duck.cabal
@@ -64,7 +64,8 @@ executable duck
     -- Modules included in this executable, other than Main.
     other-modules:
         Duck.GH,
-        Duck.GraphQl
+        Duck.GraphQl,
+        Duck.Tui
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -73,6 +74,7 @@ executable duck
     build-depends:
         base ^>=4.20.2.0,
         brick ^>= 2.9,
+        vty ^>= 6.4,
         -- Alternative prelude.
         relude ^>= 1.2.0.0,
         -- We need this for direct access to the builder methods.
